[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/GIL_____.TTF" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0431373, 0.745098, 0.0117647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.517647, 0.027451, 0.027451, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="DynamicFont" id=5]
size = 100
extra_spacing_top = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0627451, 0.890196, 0.109804, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.027451, 0.498039, 0.054902, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.992157, 0.054902, 0.054902, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.698039, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform vec4 color: hint_color;
uniform float multiplier = 0.85;
uniform float softness = .85;

void fragment()
{
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/color = Color( 0.588235, 0.0980392, 0.0980392, 1 )
shader_param/multiplier = 0.85
shader_param/softness = 0.85

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 40
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 920.0
margin_bottom = 500.0
mouse_filter = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 895.0
margin_bottom = 116.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HealthSection" type="CenterContainer" parent="MarginContainer/Rows/TopRow"]
margin_right = 200.0
margin_bottom = 10.0
mouse_filter = 2
size_flags_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Rows/TopRow/HealthSection"]
margin_right = 200.0
margin_bottom = 10.0
rect_min_size = Vector2( 200, 10 )
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="HealthTween" type="Tween" parent="MarginContainer/Rows/TopRow/HealthSection"]

[node name="MiddleRow" type="VBoxContainer" parent="MarginContainer/Rows"]
margin_top = 120.0
margin_right = 895.0
margin_bottom = 354.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/MiddleRow"]
margin_right = 895.0
margin_bottom = 172.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/MiddleRow/HBoxContainer"]
margin_right = 445.0
margin_bottom = 172.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="GameOverText" type="RichTextLabel" parent="MarginContainer/Rows/MiddleRow/HBoxContainer"]
visible = false
margin_left = 181.0
margin_right = 713.0
margin_bottom = 172.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_fonts/normal_font = SubResource( 5 )
text = " Game Over"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Rows/MiddleRow/HBoxContainer"]
margin_left = 449.0
margin_right = 895.0
margin_bottom = 172.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Rows/MiddleRow"]
margin_top = 176.0
margin_right = 895.0
margin_bottom = 234.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/MiddleRow/HBoxContainer2"]
margin_right = 295.0
margin_bottom = 58.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="RestartButton" type="Button" parent="MarginContainer/Rows/MiddleRow/HBoxContainer2"]
visible = false
margin_left = 224.0
margin_right = 445.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
disabled = true
action_mode = 0
text = "RESPAWN"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Rows/MiddleRow/HBoxContainer2"]
margin_left = 299.0
margin_right = 595.0
margin_bottom = 58.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="QuitButton" type="Button" parent="MarginContainer/Rows/MiddleRow/HBoxContainer2"]
visible = false
margin_left = 539.0
margin_right = 715.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
disabled = true
action_mode = 0
text = "QUIT"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Rows/MiddleRow/HBoxContainer2"]
margin_left = 599.0
margin_right = 895.0
margin_bottom = 58.0
size_flags_horizontal = 3

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 358.0
margin_right = 895.0
margin_bottom = 475.0
mouse_filter = 2
size_flags_vertical = 3

[node name="DeathVignette" type="ColorRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="DeathTween" type="Tween" parent="DeathVignette"]

[connection signal="pressed" from="MarginContainer/Rows/MiddleRow/HBoxContainer2/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/Rows/MiddleRow/HBoxContainer2/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="tween_step" from="DeathVignette/DeathTween" to="." method="_on_DeathTween_tween_step"]
